--- a/vim/.vim/c-support/doc/ChangeLog
+++ b/vim/.vim/c-support/doc/ChangeLog
@@ -1,3 +1,214 @@
+================================================================================
+  RELEASE NOTES FOR VERSION 6.2
+================================================================================
+- Add 'g:C_CustomTemplateFile'.
+- Add template personalization file and setup wizard.
+- Respect 'g:Xterm_Executable' and 'g:Xterm_Options'.
+  ('g:C_XtermDefaults' still works for backwards compatibility.)
+- Remove unused 'g:C_GuiTemplateBrowser'.
+- Change 'Run -> link' and 'Run -> run', do not produce object file anymore.
+- Add submenu 'Comments -> all sections'.
+- Add submenu 'Preprocessor -> include POSIX header'.
+- New and reworked templates.
+- Minor changes and bugfixes.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 6.1.1
+================================================================================
+- Added 'C_SetMapLeader' and 'C_ResetMapLeader'.
+- Bugfix: Resetting maplocalleader in filetype plug-in after setting it to the
+  value of g:C_MapLeader.
+- Bugfix: Setup of local templates in case of global installation.
+- Bugfix: Better compatibility with custom mappings
+  (use "normal!" and "noremap" consistently).
+- 'Help->show manual' shows man page text with appropriate width (UNIX only).
+- Extended the documentation.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 6.1
+================================================================================
+- Map renamed: \rme -> \re.
+- New global variable g:C_InsertFileHeader (suppress file description comment for new files).
+- Two new ex commands: CCmdlineArgs, CMakeCmdlineArgs.
+- 'Run->cmd. line arg.' : tab expansion (files/directories)for all arguments.
+- Bugfix: template 'file description header' not loading (thanks to Marco Lasczok).
+- Bugfix: unnecessary characters in one template.
+- Prototype picker improved.
+- Toggle non-C-comments.
+- Run debugger.
+- Some global variables now changeable on the fly.
+- Menus now show the correct mapleader.
+- Bugfix: g:C_LoadMenus now works.
+- Bugfix: Prevent unnecessary rereading of the template library.
+- Added Doxygen templates and 'Doxygen->brief, after member'.
+- Added help menu entries: help English, help Doxygen
+- Improved "adjust end-of-line comment".
+- Bugfix: Setup of local templates in case of global installation.
+- Bugfix: Map and menu entry 'Snippets->edit global templates'.
+- Several internal improvements.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 6.0
+================================================================================
+- New template system (many thanks to Wolfgang Mehner)
+- A few new hotkeys and menu item.
+- A few hotkeys and menu items renamed.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.19
+================================================================================
+- Resolve home for linked home directories.
+- Three C++-items removed (see file 'customization.cpp.vim').
+- Bugfix: global options changed unintentionally.
+- Minor improvements and bugfixes.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.18
+================================================================================
+- Hotkeys \lcs, \ucs removed.
+- Bugfix: delayed template initialization missing correct style.
+- Wrong cursor position when inserting some templates at the end of a line.
+
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.17
+================================================================================
+- Two new plugin tags: LICENSE,ORGANIZATION
+- System-wide installation: minimal Template file for a user will automatically
+  be added.
+- New menu item and hotkey: choose a makefile.
+- New idiom: realloc.
+- New preprocessor item: #if #endif.
+- New hotkeys: \ire, \ifs, \ifp, \pif.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.16.1
+================================================================================
+- Bugfix: problem with a system-wide installation under Windows (thanks to Ricardo Vrech).
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.16
+================================================================================
+- Plugin loads faster: loading the templates is delayed until the first use.
+- Plugin now works with pathogen.vim.
+- Menus will always be generated (for the use with :emenu).
+- Bugfix: no local templates available with a system-wide installation (thanks to Iain Arnell).
+- Several improvements.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.15
+================================================================================
+- New hotkey \cx C to C++ comments and vice versa.
+- Several hotkeys allow a range, e.g. '3\cl' (see help text and c-hotkey.pdf).
+- Improved prototype picking: \nf, \np picks up a function prototype, 
+  \nm picks up a method prototype (see documentation for more).
+- include-statements will now be inserted in the actual line (before: new line
+  below the actual line).
+- Several minor improvements.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.14
+================================================================================
+- A makefile can be run with C-F9
+- Linking ( Run menu, \rl, \rr ) will be suppressed if buffer contains no main function.
+- Bugfix: correctly deactivate unwanted compiler messages in a quickfix buffer.
+- Several minor improvements
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.13
+================================================================================
+- New hotkeys \rmc (run 'make clean') and \rme (executable to run).
+- Hotkeys for make are working when in a makefile.
+- Linker errors and errors during a make will be shown in a quickfix buffer.
+- Bugfix: detection of a systemwide installation can fail.
+- Bugfix: preprocessor directive '#if 0 #endif' not working.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.12
+================================================================================
+- New hotkeys \+" .
+- Windows: user installation now possible.
+- Bugfixe: for-idiom shows part of type definition as variable name in some cases.
+- Bugfixe: wrong cursor position for some templates.
+================================================================================
+  RELEASE NOTES FOR VERSION 5.11
+================================================================================
+- New tag {CURSOR} to avoid indent problems in a few cases.
+- Three hotkeys renamed \rg -> \rma , \ri -> \rpa ,  \re -> \rka (better to remember).
+- 'long long' added to the for-idioms.
+- Bugfixes: for-idiom shows type as variable name if no variable name was given.
+- Bugfixes: for-idiom inserts standard types with 2+ words wrong.
+- Bugfixes: multiline end-of-line comments have wrong position in some cases.
+- Bugfixes: local installation looks like a system-wide installation in seldom cases.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.10
+================================================================================
+- The plugin now handles different template styles without editing and
+  reloading the main template file.
+- The number of template styles is not limited. 
+- New hotkey and ex-command to switch template styles.
+- Template styles can automatically be related to file extensions.
+- indent(1) errors will be presented in a quickfix error window.
+- Comment alignment improved.
+- Minor improvements.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.9
+================================================================================
++ Two additional hotkeys (+ ex commands) for preprocessor statements.
++ Compile-link-run: improved error detection.
++ Menu Run: hardcopy can print any buffer.
++ Several minor improvements and bugfixes.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.8
+================================================================================
++ Hotkeys are shown in the menus.
++ File browser for code snippets and templates choosable (2 global variables).
++ Two new hotkeys: include file description (implementation, header).
++ New menu item: namespace alias
++ Bugfix: wrapper script for use of a xterm could not handle parameters containing blanks.
++ Several minor improvements.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.7
+================================================================================
++ 4 new hotkeys : insert file section comments (C/C++/H), special comments,
+  keyword comments.
++ Adjusting end-of-line comment adjustment improved.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.6
+================================================================================
++ Jump targets (templates) and mapping Ctrl-j can be switched off.
++ Yet unused jump targets will be highlighted after a file is opened.
++ Statements menu: else block (key mapping \se).
++ Handling of <SPLIT> improved (templates).
++ Minor improvements.
+
+================================================================================
+  RELEASE NOTES FOR VERSION 5.5
+================================================================================
++ Additional plugin-tags (jump targets in templates): <+text+>, <-text->.
++ Additional mapping Ctrl-j : jump to these new targets.
++ Template-file: additional macro |STYLE| and IF-ENDIF-construct to easily
+  choose between sets of templates.
++ Additional mapping: auto-complete classical C comment (also multi-line).
++ Additional mapping: auto-complete open block starting with {<CR> .
++ Visual mode for date and time insertion (menu 'Comments').
++ Visual mode for tags (submenu 'Comments->tags (plugin)').
++ Bugfix: hotkey \ica not working
++ Bugfix: hotkey Shift-F2 for the alternate-plugin disappeared. 
+
+=======================================================================================
+  RELEASE NOTES FOR VERSION 5.4
+=======================================================================================
++ New hotkey \+co inserts ' cout <<  << endl;'
++ New menu item C++-menu: 'cout' replaces 'cout variable' and 'cout string'.
++ Hotkey \c/ removed ( \cc does the same).
++ Bugfix: after an unsuccessful compilation screen sometimes garbled.
+
 =======================================================================================
   RELEASE NOTES FOR VERSION 5.3
 =======================================================================================
